--- a/test2.html
+++ b/test2.html
@@ -71,6 +71,7 @@
             4.	環境清潔及消毒的基本技巧
             	消毒液的使用、比例調配與定期消毒
             	洗手液跟乾洗手液的使用時機
+            hello this is new modified file
         </div>
         <input type="text" name="search" id="search">
         <img src="../截圖 2023-08-11 下午2.17.58.png" alt="" id="img">
