修改應用到的script檔案名稱

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>家長會選舉系統</title>
     <!-- <script src="https://cdn.jsdelivr.net/npm/xlsx@0.17.4/dist/xlsx.full.min.js"></script> -->
     <script src="./js/xlsx.full.min.js"></script>
-    <script src="./js/script202308200553.js"></script>
+    <script src="./js/script_final.js"></script>
     <link rel="stylesheet" href="./style/style.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" integrity="sha512-t4GWSVZO1eC8BM339Xd7Uphw5s17a86tIZIj8qRxhnKub6WoyhnrxeCIMeAqBPgdZGlCcG2PrZjMc+Wr78+5Xg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="./style/bootstrap.min.css">
