--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <script src="./js/anime.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script> -->
     <script src="./js/confetti.browser.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+HK:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+HK:wght@700&display=swap" rel="stylesheet"> -->
     <style>
         #result_calc_upload{
             display: none;
