--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body class="naved_body" id="body">
     <nav class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
         <div class="container-fluid">
-            <span class="span_title" onclick="location.reload()">家長會投票系統</span>
+            <span class="span_title" onclick="location.reload()">公開投票系統</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
