--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>家長會選舉系統</title>
+    <title>公開投票系統</title>
     <!-- <script src="https://cdn.jsdelivr.net/npm/xlsx@0.17.4/dist/xlsx.full.min.js"></script> -->
     <script src="./js/xlsx.full.min.js"></script>
     <script src="./js/script_final.js"></script>
